# Allegro-ROS2

./: .gitignore  README.md
Allegro_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
Allegro_moveit_config/config/: allegro_hand_right.ros2_control.xacro  allegro_hand_right.srdf  allegro_hand_right.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
allegro_game/: package.xml  setup.cfg  setup.py
allegro_game/allegro_game/: allegro_game.py  delay.py
allegro_game/launch/: start_game.launch.xml
allegro_hardware/: CMakeLists.txt  allegro_hardware.xml  package.xml
allegro_hardware/include/allegro_hardware/: RockScissorsPaper.h  robot_hardware_interface_allegro.hpp
allegro_hardware/src/: can_communicator.cpp  robot_hardware_interface_allegro.cpp
allegro_hardware/test/: test_load_allegro_hardware_interface.cpp
allegro_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
allegro_moveit_config/config/: allegro_hand_right.srdf  allegro_hand_right.urdf.xacro  joint_limits.yaml  kinematics.yaml  moveit.rviz
allegro_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
control_hand/: CMakeLists.txt  package.xml
control_hand/include/control_hand/: RockScissorsPaper.h
control_hand/launch/: moveit.launch.py  moveit.launch.xml
control_hand/src/: RockScissorsPaper.cpp  can_communicator.cpp  controller.cpp  moveit_controller.cpp
control_hand/srv/: SetJoints.srv
control_hand/urdf/: AllegroHandRight.urdf  AllegroHandRight.urdf.xacro
gesture_classifier/: setup.cfg  setup.py
gesture_classifier/gesture_classifier/: gesture_classifier.py
gesture_classifier/gesture_classifier/submodules/model/keypoint_classifier/: keypoint.csv  keypoint_classifier.hdf5  keypoint_classifier.py  keypoint_classifier.tflite
grasp/: CMakeLists.txt  RockScissorsPaper.cpp  RockScissorsPaper.h  can_communicator.cpp  can_communicator.h  controller.cpp
